[gd_scene load_steps=16 format=3 uid="uid://bvvkyb27yqbvq"]

[ext_resource type="Texture2D" uid="uid://yw11qw08c6wt" path="res://Assets/Art/Characters/Minra Starlight/minracure.png" id="1_311oa"]
[ext_resource type="Script" path="res://Scripts/ActorBaseClasses/ActorControllerBase_class.gd" id="1_m0i22"]
[ext_resource type="Script" path="res://Scripts/ActorBaseClasses/actorStatExp_Class.gd" id="1_m3e1t"]
[ext_resource type="Texture2D" uid="uid://bhb0qkwvi2exj" path="res://Assets/Art/Characters/Supplementary textures/circleShadow.png" id="3_x63i8"]
[ext_resource type="Script" path="res://Scenes/Actors/Players/Minra Starlight/flyingSpriteBounce.gd" id="4_bcj2q"]
[ext_resource type="Script" path="res://Scripts/ActorBaseClasses/actorStatsCritRate_class.gd" id="5_qqeh1"]
[ext_resource type="Script" path="res://Scripts/ActorBaseClasses/actorStatsHaste_class.gd" id="6_hp1j2"]
[ext_resource type="Script" path="res://Scripts/ActorBaseClasses/actorStatsHealth_class.gd" id="7_o12tm"]
[ext_resource type="Script" path="res://Scripts/ActorBaseClasses/actorStatsMoveSpeed_class.gd" id="8_430c2"]
[ext_resource type="Script" path="res://Scripts/ActorBaseClasses/actorStatsPickupRadius_class.gd" id="9_alkh1"]
[ext_resource type="Script" path="res://Scripts/ActorBaseClasses/PlayerActorClasses/playerInput_class.gd" id="10_nqd35"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tgncl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jwm3d"]
size = Vector2(17.5, 17.5)

[sub_resource type="SpriteFrames" id="SpriteFrames_cnbcq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_311oa")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0iiuj"]
radius = 100.0

[node name="Minra_Starlight_Player_Prefab" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource("1_m0i22")
metadata/_edit_group_ = true

[node name="EnemyCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tgncl")

[node name="EnvironmentCollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
scale = Vector2(2.4, 2.4)
shape = SubResource("RectangleShape2D_jwm3d")

[node name="CircularShadow" type="Sprite2D" parent="."]
position = Vector2(0, 23)
scale = Vector2(0.0402299, 0.0402299)
texture = ExtResource("3_x63i8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.025, 0.025)
sprite_frames = SubResource("SpriteFrames_cnbcq")
script = ExtResource("4_bcj2q")
amplitude = 2
speed = 4

[node name="playerInput_class" type="Node" parent="."]
script = ExtResource("10_nqd35")

[node name="actorStatPickupRadius" type="Node" parent="."]
script = ExtResource("9_alkh1")

[node name="PickupArea" type="Area2D" parent="actorStatPickupRadius"]

[node name="pickupRadius" type="CollisionShape2D" parent="actorStatPickupRadius/PickupArea"]
shape = SubResource("CircleShape2D_0iiuj")
debug_color = Color(0.894571, 0.000213123, 0.780794, 0.42)

[node name="actorStatMoveSpeed_class" type="Node" parent="."]
script = ExtResource("8_430c2")
MoveSpeedMaxBase = 100

[node name="actorStatHealth_class" type="Node" parent="."]
script = ExtResource("7_o12tm")
actorStatHealthMaxBase = 100

[node name="actorStatHaste_class" type="Node" parent="."]
script = ExtResource("6_hp1j2")

[node name="actorStatCritRate_class" type="Node" parent="."]
script = ExtResource("5_qqeh1")

[node name="actorStatAttack_class" type="Node" parent="."]
script = ExtResource("1_m3e1t")

[node name="actorStatExp_class" type="Node" parent="."]
script = ExtResource("1_m3e1t")

[node name="skillLabel" type="Label" parent="."]
offset_left = -347.0
offset_top = -197.0
offset_right = -307.0
offset_bottom = -174.0

[node name="CurrentLevel" type="Label" parent="."]
offset_left = -341.0
offset_top = -234.0
offset_right = -274.0
offset_bottom = -200.0
size_flags_vertical = 0
text = "Level:"

[node name="CurrentEXP" type="Label" parent="."]
offset_left = -81.0
offset_top = -229.0
offset_right = -19.0
offset_bottom = -197.0
size_flags_vertical = 0
text = "EXP:"

[node name="Healthlabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -347.0
offset_top = -197.0
offset_right = -279.0
offset_bottom = -157.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
text = "Health:"
